chore: 성공, 실패, 취소 url 임시 추가

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -19,3 +19,10 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
+app:
+  payment:
+    url:
+      success: "http://localhost:8080/payments/success"
+      fail: "http://localhost:8080/payments/fail"
+      cancel: "http://localhost:8080/payments/cancel"
